# stepheybot-music

./: .dockerignore  .env.example  .env.template  .gitignore  COMPILATION_ERRORS.md  Cargo.toml  Dockerfile  NAVIDROME_INTEGRATION.md  README.md  build-and-deploy.sh  compilation_errors.txt  disable-navidrome.sh  enable-navidrome.sh  setup-navidrome.sh  start-dev.sh  test-multiuser.sh  test-navidrome.sh  test-simple.sh  test-system.sh
docs/: IMPLEMENTATION_STATUS.md  LIDARR_INTEGRATION.md  PROJECT_DOCUMENTATION.md  README.md  TRANSMISSION_INTEGRATION.md  USER_PROFILE_SYSTEM.md
docs/api/: endpoints.md
docs/architecture/: frontend.md  overview.md
docs/progress/: changelog.md
docs/setup/: development.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/server/: manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/nodes/: 0.js  (+5 more)
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css  app.html
frontend/src/lib/components/: FloatingPlayer.svelte  GlobalSearch.svelte  MusicDiscovery.svelte  MusicPlayer.svelte
frontend/src/lib/stores/: musicPlayer.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/discover/: +page.svelte
frontend/src/routes/downloads/: +page.svelte
frontend/src/routes/search/: +page.svelte
migrations/: 001_initial.sql
src/: auth.rs  config.rs  database.rs  lib.rs  lidarr_addon.rs  main.rs  main_complex.rs  main_full_complex.rs  main_navidrome_integrated.rs  main_simple_navidrome.rs  main_storage_only_backup.rs  main_with_navidrome.rs  main_working_broken.rs  navidrome_addon.rs  utils.rs
src/api/: mod.rs  user_api.rs
src/clients/: lidarr.rs  listenbrainz.rs  mod.rs  musicbrainz.rs  navidrome.rs  qbittorrent.rs  transmission.rs
src/models/: entities.rs  mod.rs  user.rs
src/services/: download_service.rs  library.rs  mod.rs  playlist.rs  recommendation.rs  storage.rs  sync.rs  user_service.rs
(+30 files in other folders)
