[package]
name = "stepheybot-music"
version = "0.1.0"
edition = "2021"
authors = ["Stephey <stephey@stepheybot.dev>"]
description = "Private Spotify-like music streaming service with recommendations"

[[bin]]
name = "stepheybot-music"
path = "src/main.rs"

[[bin]]
name = "test_multiuser_api"
path = "src/bin/test_multiuser_api.rs"

[lib]
name = "stepheybot_music"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.77"

# HTTP server
axum = { version = "0.7.4", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = [
    "fs",
    "trace",
    "cors",
    "compression-gzip",
] }

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Database
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }

# HTTP client
reqwest = { version = "0.11.24", features = [
    "json",
    "stream",
    "multipart",
    "cookies",
] }

# Date and time
chrono = { version = "0.4.33", features = ["serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
config = "0.14.0"
dotenvy = "0.15.7"

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
sha2 = "0.10.8"
rand = "0.8.5"
regex = "1.10.2"
url = "2.5.0"
urlencoding = "2.1.3"
md5 = "0.7.0"
tempfile = "3.9.0"
walkdir = "2.4.0"
jsonwebtoken = "9.3.1"

# Features
[features]
default = ["auth", "recommendations"]
auth = []
recommendations = []
social = []
integrations = []

# Build optimization
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
